# sciformats

./: .clang-format  .clang-format-6.0.0-webkit-complete  .eslintrc.js  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  clang-format-commands.txt  doxy.config.in  package-lock.json  package.json  tsconfig.json  webpack.config.js
apps/: CMakeLists.txt  Main.cpp  main.cpp
examples/rust/: Cargo.toml  README.md
examples/rust/src/: main.rs
lib-js/: .gitlab-ci-lib-js.yml  BUILD_INSTRUCTIONS.md  Cargo.toml  README.md  check_updates.sh
lib-js/src/: andi.rs  gaml.rs  jdx.rs  json.rs  lib.rs
lib-js/tests/: integration_tests.rs
lib-js/tests/andi/: andi_chrom_parser_tests.rs  andi_chrom_reader_tests.rs  andi_ms_parser_tests.rs  andi_ms_reader_tests.rs  andi_scanner_tests.rs  mod.rs
lib-js/tests/common/: mod.rs
lib-js/tests/gaml/: gaml_parser_tests.rs  gaml_reader_tests.rs  mod.rs
lib-js/tests/jdx/: jdx_reader_tests.rs  mod.rs
lib-js/tests/json/: json_reader_tests.rs  mod.rs
lib-rs/: .gitlab-ci-lib-rs.yml  .gitlab-ci.yml  BUILD_INSTRUCTIONS.md  Cargo.toml  README.md  check_updates.sh  coverage.sh
lib-rs/src/: andi.rs  andi_chrom.rs  andi_chrom_parser.rs  andi_chrom_reader.rs  andi_chrom_scanner.rs  andi_utils.rs  api.rs  common.rs  json_exporter.rs  lib.rs  utils.rs  xml_utils.rs
lib-rs/src/andi/: README.md  andi_chrom_parser.rs  andi_chrom_reader.rs  andi_chrom_scanner.rs  andi_enums.rs  andi_ms_parser.rs  andi_ms_reader.rs  andi_ms_scanner.rs  andi_scanner.rs  andi_utils.rs  mod.rs
lib-rs/src/bind/: mod.rs
lib-rs/src/gaml/: README.md  gaml_json_exporter.rs  gaml_parser.rs  gaml_reader.rs  gaml_scanner.rs  gaml_utils.rs  mod.rs
lib-rs/src/jdx/: jdx_audit_trail_parser.rs  jdx_data_parser.rs  jdx_parser.rs  jdx_peak_assignments_parser.rs  jdx_peak_table_parser.rs  jdx_reader.rs  jdx_scanner.rs  jdx_utils.rs  mod.rs
lib-rs/src/json/: json_parser.rs  json_reader.rs  json_scanner.rs  mod.rs
lib-rs/src/mzml/: mod.rs  mzml_parser.rs  mzml_reader.rs  mzml_scanner.rs
lib-rs/tests/: andi_chrom.rs  andi_chrom_parser_tests.rs  andi_chrom_reader_tests.rs  andi_chrom_scanner_tests.rs  andi_ms_parser_tests.rs  andi_ms_reader_tests.rs  andi_ms_scanner_tests.rs  andi_scanner_tests.rs  common_tests.rs  data_read_tests.rs  integration_test.rs  integration_tests.rs  scanner_repo_tests.rs
lib-rs/tests/andi/: andi_chrom_parser_tests.rs  andi_chrom_reader_tests.rs  andi_ms_parser_tests.rs  andi_ms_reader_tests.rs  andi_scanner_tests.rs  mod.rs  scanner_repo_tests.rs
lib-rs/tests/common/: mod.rs
lib-rs/tests/gaml/: gaml_parser_tests.rs  gaml_reader_tests.rs  mod.rs
lib-rs/tests/io/: mod.rs
lib-rs/tests/jdx/: jdx_reader_tests.rs
lib-rs/tests/json/: json_reader_tests.rs
lib-rs/tests/resources/: andi_chrom_quirks.cdf  andi_chrom_quirks.cdl  andi_chrom_valid.cdf  andi_chrom_valid.cdl  andi_ms_continuum.cdf  andi_ms_continuum.cdl  andi_ms_library.cdf  andi_ms_library.cdl  andi_ms_sid.cdf  andi_ms_sid.cdl  non_andi.cdl
src/: Array2DData.cpp  AuditTrail.cpp  BinaryReader.cpp  Block.cpp  BlockParseException.cpp  CMakeLists.txt  Data2D.cpp  DataLdr.cpp  DataParser.cpp  DataTable.cpp  FileParser.cpp  FileParserSelector.cpp  FileReader.cpp  FileReaderSelector.cpp  JdxBlock.cpp  JdxBlockNode.cpp  JdxData2DNode.cpp  JdxDataParser.cpp  JdxFileParser.cpp  JdxLdr.cpp  JdxLdrParser.cpp  JdxNode.cpp  JdxParser.cpp  JdxXyData.cpp  KeyValueParam.cpp  Ldr.cpp  LdrContainer.cpp  LdrParser.cpp  LdrUtils.cpp  NTuples.cpp  NTuplesPage.cpp  Node.cpp  Page.cpp  ParseException.cpp  Peak.cpp  PeakAssignment.cpp  PeakAssignments.cpp  PeakTable.cpp  PeakUtils.cpp  Point2D.cpp  (+22 more)
src/components/: App.css  App.test.ts  App.ts  Navbar.css  Navbar.test.ts  Navbar.ts  NavbarMatchMediaMock.ts  Parameter.js  Parameter.test.js  Parameter.test.ts  Parameter.ts  ParametersPanel.js  ParametersPanel.test.js  ParametersPanel.test.ts  ParametersPanel.ts  TreeNode.css  TreeNode.test.ts  TreeNode.ts
src/components/data/: DataChart.css  DataChart.test.ts  DataChart.ts  DataPanel.css  DataPanel.test.ts  DataPanel.ts  DataTable.css  DataTable.test.ts  DataTable.ts
src/components/footer/: Footer.css  Footer.ts
src/components/menu/: AboutDialog.css  AboutDialog.ts  Menu.css  Menu.test.ts  Menu.ts  MenuItem.css  MenuItem.test.ts  MenuItem.ts  MenuItemFileOpen.css  MenuItemFileOpen.test.ts  MenuItemFileOpen.ts  Navbar.css  Navbar.test.ts  Navbar.ts  NavbarMatchMediaMock.ts  Submenu.css  Submenu.test.ts  Submenu.ts
src/components/parameters/: Parameter.ts  (+2 more)
src/model/: Channel.ts  DataRepository.ts  LocalFileDataRepository.ts  LocalFileParser.test.ts  LocalFileParser.ts  MessageBus.ts  NodeData.ts  Parser.ts  ParserRepository.test.ts  ParserRepository.ts  StubDataRepository.ts  StubParser.ts
src/util/: AuditTrailParser.cpp  AuditTrailParser.hpp  CustomEventsChannel.ts  CustomEventsMessageBus.ts  CustomeEventsChannel.test.ts  CustomeEventsMessageBus.test.ts  DataParser.cpp  DataParser.hpp  EventUtils.test.ts  EventUtils.ts  LdrUtils.cpp  LdrUtils.hpp  MultilineTuplesParser.cpp  MultilineTuplesParser.hpp  PeakAssignmentsParser.cpp  PeakAssignmentsParser.hpp  PeakTableParser.cpp  PeakTableParser.hpp  RenderUtils.test.ts  RenderUtils.ts  StringUtils.cpp  StringUtils.hpp  SysInfoProvider.ts  TuplesParser.cpp  TuplesParser.hpp  UrlUtils.test.ts  UrlUtils.ts
tests/: AuditTrailTest.cpp  BinaryReaderTest.cpp  BlockTest.cpp  CMakeLists.txt  DataParserTest.cpp  FileParserSelectorTest.cpp  FileReaderSelectorTest.cpp  IntegrationTest.cpp  JdxBlockTest.cpp  JdxDataParserTest.cpp  JdxFileParserTest.cpp  JdxLdrParserTest.cpp  JdxLdrTest.cpp  JdxParserTest.cpp  JdxRaDataTest.cpp  JdxXyDataTest.cpp  LdrParserTest.cpp  LdrTest.cpp  LdrUtilsTest.cpp  NTuplesTest.cpp  PeakAssignmentsTest.cpp  PeakTableTest.cpp  RaDataTest.cpp  StringLdrTest.cpp  StringUtilsTest.cpp  StubFileParserTest.cpp  StubFileReaderTest.cpp  StubNodeTest.cpp  StubTest.cpp  TextReaderTest.cpp  XyDataTest.cpp  XyPointsTest.cpp  binary_reader_test.cpp
tests/resources/: Claniline.jdx  CompoundFile.jdx  dummy.jdx
(+292 files in other folders)
