[package]
name = "sf_js"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ['console', 'File', 'Blob', 'FileReaderSync'] }
js-sys = "0.3"
sf_rs = { path = "../lib-rs" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

# Uncomment the below lines to retain debug information in release build
# ---------------------------------
# [profile.release]
# debug = true

# Retain debug information in wasm-pack release build
# [package.metadata.wasm-pack.profile.release]
# # otherwise just ['-O4'], see: https://github.com/rustwasm/wasm-pack/issues/797
# wasm-opt = ['-O4', '-g']
# ---------------------------------
