[package]
name = "sf_js"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# A workaround to pass the WASM target information to the compiler.
# Some code must only be included for Node.js but not for the web.
# See https://github.com/rustwasm/wasm-pack/issues/795 for a request that would make this feature obsolete.
nodejs = []
# Conditionally enabling this for a target would also help, but that's not supported either.
# See: https://stackoverflow.com/questions/57972355/enable-a-cargo-feature-by-default-when-the-target-arch-is-wasm and
# https://github.com/rust-lang/cargo/issues/1197.

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ['console', 'File', 'Blob', 'FileReaderSync'] }
js-sys = "0.3"
sf_rs = { path = "../lib-rs" }

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Uncomment the below lines to retain debug information in release build
# ---------------------------------
# [profile.release]
# debug = true

# Retain debug information in wasm-pack release build
# [package.metadata.wasm-pack.profile.release]
# # otherwise just ['-O4'], see: https://github.com/rustwasm/wasm-pack/issues/797
# wasm-opt = ['-O4', '-g']
# ---------------------------------
