[package]
name = "sciformats_js"
version = "0.1.0"
edition = "2024"
authors = ["Robert Schiwon <devrosch@gmx.net>"]
description = "JavaScript/TypeScript bindings for sciformats, a library for reading scientific data formats."
readme = "README.md"
homepage = "https://sciformats.org/"
repository = "https://github.com/devrosch/sciformats.git"
license = "MIT"
keywords = ["data formats", "JCAMP-DX", "GAML", "AnDI", "netCDF"]
categories = ["parsing", "science"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# A workaround to pass the WASM target information to the compiler.
# Some code must only be included for Node.js but not for the web.
# See https://github.com/rustwasm/wasm-pack/issues/795 for a request that would make this feature obsolete.
nodejs = []
# Conditionally enabling this for a target would also help, but that's not supported either.
# See: https://stackoverflow.com/questions/57972355/enable-a-cargo-feature-by-default-when-the-target-arch-is-wasm and
# https://github.com/rust-lang/cargo/issues/1197.

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ['console', 'File', 'Blob', 'FileReaderSync'] }
js-sys = "0.3"
sciformats = { path = "../lib-rs" }

[dev-dependencies]
wasm-bindgen-test = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Uncomment the below lines to retain debug information in release build
# ---------------------------------
# [profile.release]
# debug = true

# Retain debug information in wasm-pack release build
# [package.metadata.wasm-pack.profile.release]
# # otherwise just ['-O4'], see: https://github.com/rustwasm/wasm-pack/issues/797
# wasm-opt = ['-O4', '-g']
# ---------------------------------
