[package]
name = "sciformats"
version = "0.2.0-snapshot"
edition = "2024"
authors = ["Robert Schiwon <devrosch@gmx.net>"]
description = "A library for reading scientific data formats."
readme = "README.md"
homepage = "https://sciformats.org/"
repository = "https://github.com/devrosch/sciformats"
license = "MIT"
keywords = ["data-formats", "parser", "parsing", "science", "FAIR"]
categories = ["parsing", "science"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
netcdf3 = "0.6"
strum = { version = "0.27", features = ["derive"] }
chrono = "0.4"
quick-xml = { version = "0.38", features = ['encoding'] }
base64 = "0.22"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
# serde_json = { version = "1.0", features = ["preserve_order"] }
serde_json = { package = "sciformats_serde_json_span", path = "../../sciformats_serde_json_span", features = ["preserve_order"] }

# Uncomment the below lines to retain debug information in release build
# ---------------------------------
# [profile.release]
# debug = true
